--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,3 +38,15 @@ body {
 #app .ivu-image-img {
     vertical-align: top;
 }
+
+#app .ivu-page-header {
+    height: 48px;
+    padding: 8px 16px 0 16px;
+}
+
+#app .ivu-page-header-title {
+    width: calc(100% - 45px);
+}
+.page-container {
+    margin-top: 56px
+}
